--- a/work/CMakeLists.txt
+++ b/work/CMakeLists.txt
@@ -2,9 +2,9 @@ cmake_minimum_required(VERSION 3.8)
 
 project(work)
 
-include_directories(include)
+include_directories(src/include)
 
-aux_source_directory(src dir_srcs)
+aux_source_directory(src/main dir_srcs)
 
 set(CMAKE_CXX_STANDARD 11)
 
