--- a/work/lib/ext/googletest/gtest.cbp
+++ b/work/lib/ext/googletest/gtest.cbp
@@ -5,7 +5,7 @@
 		<Option title="gtest"/>
 		<Option makefile_is_custom="1"/>
 		<Option compiler="gcc"/>
-		<Option virtualFolders="CMake Files\;CMake Files\lib\;CMake Files\lib\ext\;CMake Files\lib\ext\googletest\;CMake Files\lib\ext\googletest\cmake\;CMake Files\src\;CMake Files\src\test\;"/>
+		<Option virtualFolders="CMake Files\;CMake Files\lib\;CMake Files\lib\ext\;CMake Files\lib\ext\googletest\;CMake Files\lib\ext\googletest\cmake\;"/>
 		<Build>
 			<Target title="all">
 				<Option working_dir="/Users/zhoubaochuan/Workspace/Cplus/cplus/work/lib/ext/googletest"/>
@@ -134,12 +134,6 @@
 		</Unit>
 		<Unit filename="/Users/zhoubaochuan/Workspace/Cplus/cplus/work/lib/ext/googletest/cmake/internal_utils.cmake">
 			<Option virtualFolder="CMake Files\lib\ext\googletest\cmake\"/>
-		</Unit>
-		<Unit filename="/Users/zhoubaochuan/Workspace/Cplus/cplus/work/src/test/CMakeLists.txt">
-			<Option virtualFolder="CMake Files\src\test\"/>
-		</Unit>
-		<Unit filename="/Users/zhoubaochuan/Workspace/Cplus/cplus/work/src/test/CMakeLists.txt">
-			<Option virtualFolder="CMake Files\src\test\"/>
 		</Unit>
 	</Project>
 </CodeBlocks_project_file>
