删除字符串操作工具，使用boost框架字符串工具

--- a/work/CMakeLists.txt
+++ b/work/CMakeLists.txt
@@ -29,7 +29,7 @@ INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/include ${PROJECT_SOURCE_DIR}lib/e
 
 
 #库文件 : libtest.a 添加到链接路径中
-link_directories(${PROJECT_SOURCE_DIR}/lib ${PROJECT_SOURCE_DIR}/lib/ext/googletest)
+link_directories(${PROJECT_SOURCE_DIR}/lib ${PROJECT_SOURCE_DIR}/lib/ext/googletest /usr/local/opt/curl/lib/)
 
 #编译器相关设置
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/output/bin")
@@ -38,7 +38,7 @@ set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_COMPILER      "clang++" )         # 显示指定使用的C++编译器
 set(CMAKE_CXX_FLAGS   "-g")                     # 调试信息
 set(CMAKE_CXX_FLAGS   "-Wall")                  # 开启所有警告
-set(CMAKE_CXX_FLAGS   "-lboost_date_time-mt-d")
+set(CMAKE_CXX_FLAGS   "-lboost_date_time-mt-d") # boost
 
 #源码目录
 FILE(GLOB_RECURSE SOURCEFILES ${PROJECT_SOURCE_DIR}/src/utility/*.cpp)
@@ -48,7 +48,7 @@ add_custom_target(cmake-build-debug)
 add_executable(${PROJECT_NAME} ${PROJECT_SOURCE_DIR}/src/main/main.cpp ${SOURCEFILES})
 add_executable(work_test ${TEST_SOURCEFILES} ${SOURCEFILES})
 
-target_link_libraries(${PROJECT_NAME} gtest ${Boost_LIBRARIES})
-target_link_libraries(work_test gtest ${Boost_LIBRARIES})
+target_link_libraries(${PROJECT_NAME} gtest ${Boost_LIBRARIES} curl)
+target_link_libraries(work_test gtest ${Boost_LIBRARIES} curl)
 
 
