--- a/work/CMakeLists.txt
+++ b/work/CMakeLists.txt
@@ -35,7 +35,9 @@ link_directories(${PROJECT_SOURCE_DIR}/lib ${PROJECT_SOURCE_DIR}/lib/ext/googlet
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/output/bin")
 set(LIBRARIES pthread)
 set(CMAKE_CXX_STANDARD 11)
-set(CMAKE_CXX_COMPILER      "clang++" )         # 显示指定使用的C++编译器
+#set(CMAKE_CXX_COMPILER      "clang++" )         # 显示指定使用的C++编译器
+set(CMAKE_C_COMPILER "gcc")
+set(CMAKE_CXX_COMPILER      "g++" )         # 显示指定使用的C++编译器
 set(CMAKE_CXX_FLAGS   "-g")                     # 调试信息
 set(CMAKE_CXX_FLAGS   "-Wall")                  # 开启所有警告
 set(CMAKE_CXX_FLAGS   "-lboost_date_time-mt-d") # boost
